--- a/index.html
+++ b/index.html
@@ -1,48 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-      <header>
-        <inner-column>
-            <h1>Heading</h1>
-        </inner-column>
-      </header>
+    <header>
+        <div class="nav">
+            <div class="left">
+                <p id="logo">Header Logo</p>
+            </div>
+            <div class="right">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
 
-      <main>
-        <section>
-            <inner-column>
-                <h2>welcome</h2>
-            </inner-column>
-        </section>
+        <div class="welcome">
+            <div class="left">
+                <h1 class="hero">This website is awesome</h1>
+                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the
+                    color is lower contrast.</p>
+                <button class="secondary"><a href="#">Sign Up</a></button>
+            </div>
+            <div class="right">
+                <div class="image">
+                    <p class="secondary">this is a placeholder for an image</p>
+                </div>
+            </div>
+        </div>
+    </header>
 
-        <section>
-            <inner-column>
-                <h2>product</h2>
-            </inner-column>
-        </section>
+    <main>
+        <h2>Some random information.</h2>
+        <div class="card-container secondary">
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
 
-        <section>
-            <inner-column>
-                <h2>quote</h2>
-            </inner-column>
-        </section>
-        
-         <section>
-            <inner-column>
-                <h2>call to action</h2>
-            </inner-column>
-        </section>
-      </main>
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
 
-      <footer>
-        <inner-column>
-            <h2>welcome</h2>
-        </inner-column>
-      </footer>
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </main>
+
+    <div class="quote">
+        <em>This is an inspiring quote.</em>
+        <p>- Someone Important</p>
+    </div>
+
+    <div class="sign-up">
+        <div class="container">
+            <div class="left">
+                <strong>Call to action!</strong>
+                <p class="secondary">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right">
+                <button class="secondary">Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        Copyright &copy; The Odin Project 2025
+    </footer>
 </body>
+
 </html>
