--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
-        <div class="nav">
+        <div class="nav">        
             <div class="left">
                 <p id="logo">Header Logo</p>
             </div>
+    
             <div class="right">
                 <ul>
                     <li><a href="#">header link one</a></li>
@@ -26,65 +24,59 @@
 
         <div class="welcome">
             <div class="left">
-                <h1 class="hero">This website is awesome</h1>
-                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
-                    font and the
-                    color is lower contrast.</p>
-                <button class="secondary"><a href="#">Sign Up</a></button>
+                <h1 class="hero">This website is not that awesome</h1>
+                <p class="info">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <a href="#" class="btn">Sign Up</a>
             </div>
+            
             <div class="right">
                 <div class="image">
-                    <p class="secondary">this is a placeholder for an image</p>
+                    <p class="info">This is an placeholder for an image</p>
                 </div>
             </div>
         </div>
     </header>
 
     <main>
-        <h2>Some random information.</h2>
-        <div class="card-container secondary">
+        <h2>Some random information</h2>
+        <div class="container">
             <div class="card">
-                <div class="square"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="box"></div>
+                <p>this is some other subtext under an illustration or image</p>
             </div>
-
             <div class="card">
-                <div class="square"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="box"></div>
+                <p>this is even some more other under an illustration or image</p>
             </div>
-
             <div class="card">
-                <div class="square"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="box"></div>
+                <p>this is definitely a subtext under a box</p>
             </div>
-
             <div class="card">
-                <div class="square"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <div class="box"></div>
+                <p>this is definitely a subtext under a box</p>
             </div>
         </div>
     </main>
 
     <div class="quote">
-        <em>This is an inspiring quote.</em>
+        <em>This is an inspiring quote to inspire the customer, or just to fill up the space. Also it looks nice.</em>
         <p>- Someone Important</p>
     </div>
 
-    <div class="sign-up">
-        <div class="container">
+    <div class="signup">
+        <div class="actionbox">
             <div class="left">
                 <strong>Call to action!</strong>
-                <p class="secondary">Sign up for our product by clicking that button right over there!</p>
+                <p class="info">Sign up for our product by clicking that button right over there!</p>
             </div>
+
             <div class="right">
-                <button class="secondary">Sign up</button>
+                <a href="#" class="btn">Sign Up</a>
             </div>
         </div>
     </div>
 
-    <footer>
-        Copyright &copy; The Odin Project 2025
-    </footer>
+    <footer>Copyright &copy; The Odin Project 2025</footer>
 </body>
-
 </html>
